Fix background-color on mobile

--- a/packages/ui/assets/styling/globals.scss
+++ b/packages/ui/assets/styling/globals.scss
@@ -8,6 +8,7 @@
 html {
     font-family: 'adwaita', 'adwaita-fallback';
     font-size: $font-size;
+    background-color: $color-dark;
 }
 
 header {
